--- a/style.css
+++ b/style.css
@@ -1,16 +1,36 @@
 /* #region Global-Styling */
-*{
-    padding: 0;
-    margin: 0;
-}
-html{
+html {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    
     background-color: rgb(215, 187, 137);
     background-image: linear-gradient(30deg, rgba(122, 13, 31, 0.705), rgba(122, 13, 31, 0));
 }
-body{
-    margin: 1rem 12rem;
-    border-radius: 5px;
+
+*,
+*:before,
+*:after {
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
+}
+
+*{
+    padding: 0;
+    margin: 0;
     
+    width: 100%;
+    height: 100%;
+
+}
+
+body {
+    width: 70%;
+    margin: 3% 15%;
+    height: 94%;
+    border-radius: 5px;
+
     background-color: rgb(37, 35, 35);
     color: rgba(255, 247, 240, 0.76);
 
@@ -20,50 +40,75 @@ body{
     box-shadow: 2px -2px 9px 0px rgba(12, 1, 3, 0.438);
 
 }
-ul{
+
+ul {
     list-style: none;
 }
+
+.header,h2 {
+    /* width: 100vw; */
+    text-align: right;
+    color: rgba(253, 253, 253, 0.37);
+}
+
 /* #endregion Global-Styling */
 
-
-
 /* #region Header */
-header{
+header {
     padding: 1rem;
-    background-image: url('./img/7d6fb303bc0e0d11e39bd38bcb6687d3.jpg');
-    background-size: contain;
+    background-image: url('./res/chair.png');
+    background-size: cover;
+    background-position: center;
     background-repeat: no-repeat;
     /* filter: opacity(0.5); */
-    height: 50vh;
-    border: white solid;
+    height: 30%;
+    /* border: white solid; */
 }
-    nav{
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        font-weight: 900;
-    }
-        .nav-list{
-            display: flex;
-            width: 40%;
-            justify-content: space-between;
-            font-v
-        }
-    
-    .banner{
-        text-align: center;
-        border: white solid;
-    }
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-list {
+    display: flex;
+    width: 40%;
+    justify-content: space-between;
+}
+
+.banner {
+    text-align: center;
+    /* border: white solid; */
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 /* #endregion Header */
 
+/* #region Portfolio */
+.portfolio {
+    height: 33%;
+}
+.portfolio-category{
+    background-color: whitesmoke;
+    height: 90%;
+}
+
+/* #endregion Portfolio */
 
 /* #region About */
-    .about h2{
-        text-align: right;
-        color: rgba(253, 253, 253, 0.37);
-    }
-    .about .body{
-        display: flex;
-        justify-content: center;
-    }
+.about{
+    height: 33%;
+    border: 1px white solid;
+}
+
+.about .body {
+    display: flex;
+    justify-content: center;
+}
+
 /* #endregion About */
